2003-04-12  Brian Warner  <warner@lothar.com>

	* twisted/test/test_tcp.py (LocalRemoteAddressTestCase): iterate
	harder. some systems might not connect to localhost before
	iterate() is called, flunking the test

	* twisted/test/test_process.py: only install SIGCHLD handler if the
	reactor offers a hook for it.

	* twisted/test/test_policies.py (ThrottlingTestCase.doIterations):
	add more iterations to accomodate reactors that do less IO per pass

	* twisted/test/process_signal.py: reset SIGHUP to default handler,
	fixes test failures in a 'nohup' environment

	* twisted/test/test_process.py (PosixProcessTestCasePTY): remove
	testClosePty.todo now that it works
	(SignalProtocol.processEnded): Improve testSignal error messages

	* twisted/internet/process.py (PTYProcess.connectionLost): Treat
	PTYs more like sockets: loseConnection sets .disconnecting and
	lets the write pipe drain, then the PTY is closed in
	connectionLost.

2003-04-12  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/plugins.tml, twisted/tap/ssh.py, twisted/tap/conch.py: moved
	the conch server from 'mktap ssh' to 'mktap conch'.

2003-04-12  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py (Gtk2Reactor.doIteration): don't
	process *all* events before exiting: lots of IO (like test cases which
	do connect()s from inside connectionMade) will keep us from surfacing
	from reactor.iterate(), causing a lockup.
	* twisted/internet/gtkreactor.py (GtkReactor.doIteration): same. Use
	the same code as gtk2reactor with minor gtk1-vs-gtk2 variations.

2003-04-11  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py (Gtk2Reactor.doIteration): use
	timers to match the behavior of select()-based reactors.
	reactor.iterate(delay) is thus defined to return after 'delay'
	seconds, or earlier if something woke it up (like IO, or timers
	expiring).

2003-04-11  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/defer.py: Added new, experimental function,