@@ -1,5 +1,12 @@
 2003-04-12  Brian Warner  <warner@lothar.com>
 
+	* twisted/test/test_process.py (PosixProcessTestCasePTY): skip
+	testStdio, testStderr, and testProcess. PTYs do not have separate
+	stdout/stderr, so the tests just aren't relevant. testProcess
+	might be, but it requires support for closing the write side
+	separately from the read side, and I don't think our processPTY
+	can do that quite yet.
+
 	* twisted/test/test_tcp.py (LocalRemoteAddressTestCase): iterate
 	harder. some systems might not connect to localhost before
 	iterate() is called, flunking the test
